fixed design on mobile devices and added SEO tags

--- a/style.css
+++ b/style.css
@@ -41,12 +41,6 @@ footer {
   padding: 3vw 3vw;
 }
 
-@media screen and (max-width: 640px) {
-  .navbar {
-    display: none;
-  }
-}
-
 .navbar ul {
   list-style: none;
   display: flex;
@@ -61,6 +55,12 @@ footer {
 
 .navbar a:hover {
   text-decoration: underline;
+}
+
+@media screen and (max-width: 640px) {
+  .navbar {
+    display: none;
+  }
 }
 
 /* APRESENTATION */
@@ -84,9 +84,16 @@ footer {
   height: 8vw;
 }
 
-.logo h1, .logo img {
+.logo h1 {
   font-weight: 900;
   font-size: 8vw;
+}
+
+.slogan {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .slogan h2 {
@@ -95,8 +102,12 @@ footer {
 }
 
 @media screen and (max-width: 720px) {
+  .logo {
+    flex-direction: column;
+  }
+
   .logo img {
-    height: 12vw;
+    height: 12rem;
   }
   
   .logo h1 {
@@ -104,7 +115,7 @@ footer {
   }
   
   .slogan h2 {
-    font-size: 4vw;
+    font-size: 7vw;
   }
 }
 
@@ -144,6 +155,10 @@ footer {
 }
 
 @media screen and (max-width: 720px) {
+  .about {
+    margin-top: 20vh;
+    gap: 15vh;
+  }
   .about-item {
     flex-direction: column-reverse;
   }
@@ -158,6 +173,9 @@ footer {
   }
   .y-p4 {
     padding: 0 0.5rem;
+  }
+  .about-item img {
+    height: 30vh;
   }
 }
 
